feat: story new desing of accordion

--- a/app/app.css
+++ b/app/app.css
@@ -218,7 +218,12 @@
   .typography h6:not(.not-typography h6):first-child {
     margin-top: 0;
   }
-  .typography h1:not(.not-typography h1) + p, .typography h2:not(.not-typography h2) + p, .typography h3:not(.not-typography h3) + p, .typography h4:not(.not-typography h4) + p, .typography h5:not(.not-typography h5) + p, .typography h6:not(.not-typography h6) + p {
+  .typography h1:not(.not-typography h1) + p,
+  .typography h2:not(.not-typography h2) + p,
+  .typography h3:not(.not-typography h3) + p,
+  .typography h4:not(.not-typography h4) + p,
+  .typography h5:not(.not-typography h5) + p,
+  .typography h6:not(.not-typography h6) + p {
     margin-top: 0;
   }
   .typography p:not(.not-typography p) {
@@ -262,10 +267,10 @@
     text-align: left;
     font-weight: 700;
   }
-  .typography table:not(.not-typography table) th[align="center"] {
+  .typography table:not(.not-typography table) th[align='center'] {
     text-align: center;
   }
-  .typography table:not(.not-typography table) th[align="right"] {
+  .typography table:not(.not-typography table) th[align='right'] {
     text-align: right;
   }
   .typography table:not(.not-typography table) tbody tr {
@@ -281,10 +286,10 @@
     padding: calc(var(--spacing) * 2) calc(var(--spacing) * 4);
     text-align: left;
   }
-  .typography table:not(.not-typography table) td[align="center"] {
+  .typography table:not(.not-typography table) td[align='center'] {
     text-align: center;
   }
-  .typography table:not(.not-typography table) td[align="right"] {
+  .typography table:not(.not-typography table) td[align='right'] {
     text-align: right;
   }
   .typography ul:not(.not-typography ul) {
@@ -354,8 +359,8 @@
     color: var(--color-muted-foreground);
   }
   .typography img:not(.not-typography img),
-    .typography picture:not(.not-typography picture),
-    .typography video:not(.not-typography video) {
+  .typography picture:not(.not-typography picture),
+  .typography video:not(.not-typography video) {
     margin-top: calc(var(--spacing) * 6);
     margin-bottom: calc(var(--spacing) * 6);
   }
@@ -371,7 +376,7 @@
     line-height: var(--text-xs--line-height);
     font-weight: 600;
   }
-  .typography hr {
+  .typography hr:not(.not-typography hr) {
     margin-top: calc(var(--spacing) * 10);
     margin-bottom: calc(var(--spacing) * 10);
   }
@@ -407,10 +412,38 @@
     line-height: 1;
   }
 
-@media (min-width: 1024px) {
-  .typography h1:not(.not-typography h1) {
-    font-size: var(--text-5xl);
-    line-height: var(--text-5xl--line-height);
+  @media (min-width: 1024px) {
+    .typography h1:not(.not-typography h1) {
+      font-size: var(--text-5xl);
+      line-height: var(--text-5xl--line-height);
+    }
+  }
+}
+
+@utility story {
+  @apply mx-auto max-w-3xl pt-5 [&_h2,h3]:border-0;
+
+  h1 + p {
+    @apply mt-2;
+  }
+
+  p:has(+ .story-demo) {
+    @apply mb-7;
+  }
+
+  .story-demo {
+    @apply mb-10;
+
+    & > h2 {
+      @apply mb-3 text-sm font-semibold has-[+_p]:mb-1;
+    }
+
+    & > p {
+      @apply mb-3 text-sm;
+    }
+
+    & > div {
+      @apply min-h-75 content-center rounded-xl border p-5;
     }
   }
 }
